<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="15dp"
        android:text="@string/information"
        android:textColor="@color/txt_color" />

    <TextView
        android:id="@+id/textView_name_patient"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:text="TextView" />

    <TextView
        android:id="@+id/textView_name_medicine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="TextView" />

    <View
        android:id="@+id/separator_light_pink"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/txt_color" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_margin="10dp"
        android:text="CONFIGURAÇÃO"
        android:textColor="@color/txt_color" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="5dp"
        android:weightSum="1" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/datebeginning"
                android:textColor="@color/txt_color" />

            <TextView
                android:id="@+id/textView_date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/datefinish"
                android:textColor="@color/txt_color" />

            <TextView
                android:id="@+id/textView_date_finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="TextView" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginBottom="10dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/time"
            android:textColor="@color/txt_color" />

        <TextView
            android:id="@+id/textView_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView" />
    </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content" 
          android:weightSum="1"
          android:layout_marginBottom="10dp">

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:orientation="vertical" 
              android:layout_weight="0.5"
              android:gravity="center">

              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:text="@string/color"
                  android:textColor="@color/txt_color" />

              <View
                  android:id="@+id/separator_chosen"
                  android:layout_width="30dp"
                  android:layout_height="30dp"
                  android:background="@color/blue_square"/>
          </LinearLayout>

          <LinearLayout
              android:layout_width="wrap_content"
              android:layout_height="match_parent"
              android:orientation="vertical" 
              android:layout_weight="0.5"
              android:gravity="center">
              
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginBottom="10dp"
                  android:text="@string/sound"
                  android:textColor="@color/txt_color" />

              <TextView
                  android:id="@+id/textView_sound_state"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="TextView" />

          </LinearLayout>

      </LinearLayout>

      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content" 
          android:weightSum="1"
          android:layout_marginTop="25dp">

          <Button
              android:id="@+id/button_remove"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:background="@android:color/transparent"
              android:text="@string/remove"
              android:textColor="@color/txt_color" />

          <Button
              android:id="@+id/button_save"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_weight="0.5"
              android:background="@android:color/transparent"
              android:text="@string/save"
              android:textColor="@color/txt_color" />

      </LinearLayout>

</LinearLayout>